# Primerize

./: README.md  pyproject.toml
primerize/: __init__.py  misprime.py  primerize_1d.py  primerize_2d.py  primerize_3d.py  primerize_custom.py  thermo.py  util.py  util_class.py  util_func.py  util_server.py  wrapper.py
tests/: test_primerize_1d.py  test_util.py  test_wrapper.py
