[project]
name = "primerize"
version = "2.0.0"
dependencies = [
    "numpy>=1.14.2",
    "matplotlib>=2.2.2",
    "xlwt>=1.3.0"
]
description="PCR Assembly Primer Design"
readme = "README.md"

authors = [
  {name = "Siqi Tian"},
  {name = "Rhiju Das", email = "rhiju@stanford.edu"},
]

[project.urls]
Repository="https://github.com/ribokit/Primerize/"

[project.scripts]
primerize1d = "primerize.primerize_1d:main"
primerize2d = "primerize.primerize_2d:main"
primerize3d = "primerize.primerize_3d:main"

[tool.setuptools]
packages = ["primerize"]